complete sconed assignment about data binding & string interpelation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-
-
 <app-successalert></app-successalert>
-
 <app-warningalert></app-warningalert>
 
+<hr>
+<div class="input-div">
+    <input type="text" id="username" [(ngModel)]="userName" />
+    <button (click)="resetUserName()" [disabled]="userName !== ''">Submit</button>
+</div>
+<p>{{'username is : ' +  userName}}</p>
